--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -56,31 +56,34 @@ body {
 }
 
 .quote {
-    display: flex;
-    flex-direction: column;
+    
     background-color: rgb(32, 21, 37);
      
     font-family: 'Amatic SC', cursive;
-    font-size: 50px;
+    font-size: 3vw;
     font-weight: bolder;
     color: whitesmoke;
 }
 
-#msQuote {
-    
-    
-    display: flex;
-    justify-content: center;
-    
-    padding: 50px 200px 0 200px;
+#msQuote { 
+    padding: 2vh 4vw 0 4vw;
+    text-align: center;
 }
 
-#msSig {
-    
-    
+#wayne { 
+    font-size: 1.5vw;
+    padding: 0 30vw 0 0;
+    text-align: right;
+}
+
+#quoteMark {  
+    font-size: 3vw;
+}
+
+#msSig {  
     display: flex;
     justify-content: flex-end;
-    padding: 0 200px 30px 0
+    padding: 0 25vw 2vh 0
 }
 
 footer {
