--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -35,6 +35,10 @@ h1 {
     padding: 100px 0 30px 0;
 }
 
+#projectPic {
+    padding: 100px 0 30px 0;
+
+}
 
 #heading a {
     background-color: #931747;
@@ -107,4 +111,21 @@ footer {
 
 .contact {
     background-color: whitesmoke;
+}
+
+.projectpage {
+    background-color: black;
+}
+
+.contactInfo {
+    color: pink;
+    font-weight: 400;
+    font-size: 1.5rem;
+    font-family: 'Amatic SC', cursive;
+}
+
+.icon {
+   cursor: pointer; 
+   width: 15%;
+   height: 15%;
 }
